--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "version": 2,
-    "builds": [{"src": "./api.py", "use":
-     "@vercel/static-build"}],
-    "routes":[{"src": "/(.*)", "dest": "/"}]
-}
+    "builds": [
+      { "src": "api.py", "use": "@vercel/python" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/" }
+    ]
+  }
+  
