--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
     "version": 2,
-    "builds": [
-      { "src": "api.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/" }
-    ]
-  }
-  
+    "builds": [{"src": "./api.py", "use":
+     "@vercel/python"}],
+    "routes":[{"src": "/(.*)", "dest": "/"}]
+}
