--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-    "version": 2,
-    "builds": [{"src": "./api.py", "use":
-     "@vercel/python"}],
-    "routes":[{"src": "/(.*)", "dest": "/"}]
+    "rewrites": [{ "source": "/(.*)", "destination": "/api/api" }]
 }
